--- a/IrrduinoDroid/IrrduinoRemote/AndroidManifest.xml
+++ b/IrrduinoDroid/IrrduinoRemote/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name" >
         
         <activity
-            android:label="@string/activity_title"
+            android:label="@string/activity_title_main"
             android:name=".IrrduinoRemoteActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+	        android:label="@string/activity_title_settings"
+	        android:name=".Settings">
+		</activity>
     </application>
 
 </manifest>
