--- a/IrrduinoDroid/IrrduinoRemote/AndroidManifest.xml
+++ b/IrrduinoDroid/IrrduinoRemote/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.joefernandez.irrduino.android.remote"
-    android:versionCode="2"
-    android:versionName="0.2" >
+    android:versionCode="3"
+    android:versionName="0.3" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="14" />
     
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:hardwareAccelerated="false"
+        >
         
         <activity
             android:label="@string/activity_title_main"
